# AI-agents-EX4

./: .env-example  .gitignore  README.md  pyproject.toml
artifacts/before_after/: after.md  before.md  fix.diff
artifacts/diagrams/: agent_workflow_diagram.md  architecture_block_diagram.md  mathsquiz_graphify_architecture_graph.md  oop_diagram.md  score_state_flow_diagram.md
artifacts/graphify/: GRAPH_REPORT.md  graph.html  graph.json  graph_metrics.json
artifacts/logs/: bug_reproduction_before.md  graph_guided_agent_log.md  graphify_run.md  langgraph_run_output.md  naive_baseline_log.md  phase1_print_final_scores_probe.md  phase3_preparation_run.md  phase3_verification.md  phase5_verification.md  phase6_verification.md  phase7_verification.md  test_after_fix.md
docs/: PLAN.md  PRD.md  PRD_agent_instruction_architecture.md  TODO.md
obsidian/: architecture.md  bug_investigation.md  components.md  hot.generated.md  hot.md  index.md  mathsquiz.md  original_extension.md  print_final_scores_global_state_bug.md  tests_and_verification.md  token_efficiency.md
reports/: agent_workflow_report.md  bug_analysis_report.md  final_end_to_end_audit.md  final_submission_checklist.md  final_submission_report.md  fix_verification_report.md  graphify_local_run_report.md  original_extension_report.md  phase1_review.md  phase2_architecture_review.md  phase4_review.md  phase5_review.md  phase6_review.md  phase7_review.md  repository_size_report.md  reverse_engineering_report.md  rubric_submission_checklist.md  suspicious_nodes.md  token_efficiency_report.md
src/agent/: prompts.py  (+6 more)
(+15 files in other folders)
