[project]
name = "ex04-graphify-obcidian-reverse-engineering"
version = "1.00"
description = "EX04 graph-guided reverse engineering, debugging, and token-efficient agentic AI project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "networkx>=3.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "artifacts",
    "data/raw",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]

